--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -835,6 +835,78 @@ li.account p{
     background-color: transparent;
     border: 0;
 }
+#txt-title{
+    width: calc(100% - 100px);
+    font-size: 30px;
+    margin-bottom: 30px;
+    height: auto;
+}
+#contact-table .icon-button{
+    float:left;
+    background-color: transparent;
+    border: 0;
+}
+
+#txt-abstract{
+    height: 155px;
+}
+
+span.remove{
+    position: absolute;
+    left: 0;
+    height: 100% !important;
+    background: #EEE;
+    top: 0;
+}
+
+.form-control{
+    margin-bottom:8px;
+}
+
+.no-padding{
+    padding:0;
+}
+
+.icon-remove{
+    font-size: 17px;
+    top: 3px;
+    left: 6px;
+    color: rgb(217, 83, 79);
+    cursor:pointer;
+}
+
+.icon-add{
+    font-size: 17px;
+    top: 3px;
+    left: 1px;
+    color: #5cb85c;
+    cursor:pointer;
+}
+
+.icon-add:hover{
+    color: #47a447;
+}
+
+.icon-remove:hover{
+    color: rgb(168, 69, 66);
+}
+
+#panel-left{
+    padding-right:8px;
+    padding-left:0;
+    margin-bottom: 10px;
+}
+
+#panel-right{
+    padding-left:8px;
+    padding-right:0;
+    margin-bottom: 10px;
+}
+#add-keyword-wrapper{
+    width: 200px;
+    display: inline-flex;
+}
+
 
 #relatedResourcesTab{
     overflow:hidden;
@@ -1019,6 +1091,14 @@ table.table-plain td{
     -webkit-box-shadow: inset 0 1px 0 #ffffff;
     -moz-box-shadow: inset 0 1px 0 #ffffff;
     box-shadow: inset 0 1px 0 #ffffff;
+}
+
+#coverageTab{
+    overflow-x:hidden;
+}
+
+#coverageTab{
+    overflow-x:hidden;
 }
 .tab-elements > .tabs-body{
     max-height: 400px;
@@ -1234,6 +1314,9 @@ body > .container{
 #citation-text {
     display: inline-block;
     float: left;
+    /*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
+    /*margin-left:10px;*/
+    /*width:90%;*/
 }
 
 #citation-text a, .rights-url a{
@@ -1361,14 +1444,11 @@ span.name-label{
     overflow-y:hidden;
 }
 
-.tab-elements .panel-tabs, .tab-elements .tabs-body{
-    /*min-width:403px;*/
-}
-
-
 .tab-elements .table:not(.table-striped) {
     width:auto;
 }
+
+
 
 .tab-elements .table td, .tab-elements .table th{
     border:0;
