--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -63,6 +63,22 @@
                 </div>
             </div>
     {%  endif %}
+
+{# block to show the ncdump info #}
+{% block ncdump %}
+    {% for f in cm.files.all %}
+        {% if f.resource_file.name|slice:"-3:" == 'txt'%}
+            <h2>netCDF Header Information</h2>
+            <p>{{ f.resource_file.name|slice:"33:" }}</p>
+            {% if f.resource_file.size <= 5000000 %}
+                <textarea readonly rows="20" cols="100">{{ f.resource_file.read}}</textarea>
+            {% else %}
+                <textarea readonly rows="2" cols="100">The size of the netCDF header information text file is too large for loading on the page.</textarea>
+            {% endif %}
+        {% endif %}
+    {% endfor %}
+{% endblock %}
+
 {%  endblock %}
 
 {% block extra_js %}
