Updated to the new resource workflow

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -30,6 +30,7 @@
                 <option value="RefTimeSeries">HIS Referenced Time Series</option>
                 <option value="ModelInstanceResource">Model Instance Resource</option>
                 <option value="NetcdfResource">Multidimensional Space and Time Data Resource</option>
+                <option value="ModelProgramResource">Model Program Resource</option>
             </select>
         </div>
     </div>
