[#165] Minor style changes for buttons   [#165] Added dropdown triggers for 'Rights' fields.

--- a/theme/templates/generic/includes/comments.html
+++ b/theme/templates/generic/includes/comments.html
@@ -21,7 +21,7 @@ $(function() {
     {% else %}
     {% fields_for unposted_comment_form %}
     {% endif %}
-    <input class="hl-btn hl-btn-dark hl-btn-sm" type="submit" value="{% trans "Comment" %}">
+    <input class="btn btn-success" type="submit" value="{% trans "Comment" %}">
 
 </form>
 {% endif %}
