--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -404,6 +404,10 @@ img.img-about {
   height: 64px;
   width: 64px;
 }
+
+img.media-object{
+    margin-right:10px;
+}
 .media-heading a{
   color: #333;
 }
@@ -916,7 +920,6 @@ span.remove{
     border: 1px solid #ddd;
     padding: 0 15px;
     padding-bottom: 15px;
-    background: #F9F9F9;
 }
 
 .info-group table td{
@@ -1002,14 +1005,28 @@ html, body{
 
 #btn-public.active{
     color:#FFF;
-    background:#5cb85c;
+    background: #5cb85c;
+    border-color: #20833F;
 }
 
 #btn-private.active{
     color:#FFF;
-    background:#d9534f
+    background:#d9534f;
+    border-color: #8C3C3A;
 }
 
+.btn-success {
+    border-color: #20833F;
+}
+
+.btn-danger{
+    border-color: #8C3C3A;
+}
+
+.btn{
+    box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset;
+    /*0 1px 1px rgba(100,100,100,0.3);*/
+}
 #id_user-wrapper{
     width: calc(100% - 97px);
     padding: 1px;
@@ -1091,6 +1108,10 @@ table.table-plain td{
     -webkit-box-shadow: inset 0 1px 0 #ffffff;
     -moz-box-shadow: inset 0 1px 0 #ffffff;
     box-shadow: inset 0 1px 0 #ffffff;
+}
+
+#coverageTab{
+    overflow-x:hidden;
 }
 
 #coverageTab{
@@ -1332,10 +1353,12 @@ div#sharing-status {
 }
 
 .tag-list {
-    margin: 0;
+    min-height:46px !important;
+    margin-top:10px;
     list-style: none;
     padding: 10px 10px 5px 10px !important;
 }
+
 
 .tag {
     display: inline-block;
@@ -1343,7 +1366,7 @@ div#sharing-status {
     color: #111111;
     background-color: #f6f6f6;
     padding: 1px 10px;
-    border: 1px solid #dddddd;
+    border: 1px solid #B0B0B0;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     border-radius: 15px;
